parser.cpp
#include "parser.h"
#include<iostream>
#include<string.h>
#include<string>
#pragma warning(disable:4996)
using namespace std;

int n_line = 1;
int s_nxt = 0;
int BET = 0;
int BEF = 0;
bool Check_Phir = false;
int argCount=0;

vector<int> BEF_v;
vector<int> BET_v;


vector<std::string> Code_Lines;
vector<int> elses;

string Lexemes[] = {
    "END_OF_FILE",
    "NL",
    "INT",
    ";",
    "ID",
    "RELOP",
    "COMMENT",
    "IO",
    ":=",
    "(",
	")",
	"|",
	":",
	"@",
	"`",
	"+",
	"-",
	"*",
	"/",
	"%",
    "STRING",  
	"markazi",
	"kaam",
	"karo",
	"rakho",
	"jab",
	"tak",
	"bas",
	"agar",
	"to",
	"warna",
	"phir",
	"dekhao",
	"lo",
	"chalao",
	"bhaijo",
	"adad",
	"khali",
	"khatam",
    "wapas",
    "error",
    "temp"
	};


void parser::syntax_error()
{
    cout << "SYNTAX ERROR AT LINE  " << countLines()+1 <<endl;;
    exit(1);
}

void fillblank(int At, int What){
    ifstream file;
    file.open("TAC.txt");
    if(file.is_open()){
        int it= 0;
        std::string line;
        while(std::getline(file, line)){
        Code_Lines.push_back(line);}
        file.close();
    }else{
        cout<<"error";
    }


    int u = Code_Lines[At-1].length()-2;
    string str_num =to_string(What);
    int str_num_len = str_num.size();

    // char line_num = What + '0';
    for(int i=0;i<str_num_len;i++){
        Code_Lines[At-1][u++]=str_num[i];
    }


    const char* filename = "TAC.txt";
    int result = std::remove(filename);


    ofstream file_out;
    file_out.open("TAC.txt");
    if(file_out.is_open()){
        for(int i=0; i<Code_Lines.size();i++)
        {file_out << Code_Lines[i];
        file_out <<'\n';}
        file_out.close();
    }

    Code_Lines.clear();


}

void parser::write_TAC(string lexeme, bool nl){

    
    ofstream myfile;
    myfile.open("TAC.txt",ios::app);
    if (myfile.is_open())
    {
        myfile <<string(lexeme)<<" ";
        if(nl){ myfile<<"\n"; n_line++;}
        myfile.close();
    }
    else cout << "Unable to open file";
}

void parser::write_TAC_NS(string lexeme, bool nl){

    ofstream myfile;
    myfile.open("TAC.txt",ios::app);
    if (myfile.is_open())
    {
        myfile <<string(lexeme);
        if(nl){ myfile<<"\n"; n_line++;}
        myfile.close();
    }
    else cout << "Unable to open file";
}







void parser::write_symbol_table(){
    ofstream myfile ("symbol_table.txt");
    if (myfile.is_open())
    {
        myfile <<"TYPE        Initial_Value      Address      Id_Type        ID\n";
        for(int i=0;i<symbols.size();i++)
        {
           
           if(S_type[i]==1)
           myfile<<"adad ";
           else
           myfile<<"khali";

           myfile<<'\t'<<'\t'<<'\t'<<'\t';

           myfile<<S_initial_value[i];
           myfile<<'\t'<<'\t'<<'\t';
           myfile<<symbols_address[i];

           myfile<<'\t'<<'\t'<<'\t';

           if(S_id_type[i]==0)
           myfile<<"func";
           else if(S_id_type[i]==1)
           myfile<<"var ";
           else if(S_id_type[i]==2)
           myfile<<"param";

           myfile<<'\t'<<'\t'<<'\t';

           if(symbols[i].tokenType!=TokenType::MARKAZI)
           myfile<<symbols[i].lexeme;
           else 
           myfile<<"Markazi";
           
            myfile<<'\n';
            
        }
        myfile.close();
    }
    else cout << "Unable to open file";
}

void parser::print_tabs(){
    // for(int i=0;i<tabs;i++)
    // {
    //     cout<<'\t';
    // }
    for(int i=0;i<tabs;i++)
    {
        cout<<"    ";
    }
}

token parser::expect(TokenType expected_type)
{
    //cout<<"I";
    token t = _lexer.getNextToken();
    print_tabs();
    t.Print(); 
     //t.PrintOnlyToken();

    if (t.tokenType != expected_type){
        cout<<"Mismatched Token  = ";t.Print();
        syntax_error();
    }
    else {
        ;
    }
    //cout<<"O";
    return t;
}



parser::parser(const char filename[])
{
    _lexer = lexer(filename);
    readAndPrintAllInput();
    cout<<"-------------<PARSING>---------------"<<endl<<endl;

    Program();


    while(_lexer.peek(1).tokenType == TokenType::NL)
       _lexer.getNextToken();

    if (_lexer.peek(1).tokenType != TokenType::END_OF_FILE)
    {
       syntax_error();
    }

    write_symbol_table();
   
}



void parser::readAndPrintAllInput() //read and print allinputs (provided)
{
    token t;
    t = _lexer.getNextToken();
    while (t.tokenType != TokenType::END_OF_FILE)
    {
        t.Print();
        t = _lexer.getNextToken();
    }


}



void parser::resetPointer()
{
    _lexer.resetPointer();
}



//this function is for sample purposes only

// void parser::T()
// {
//     resetPointer();
//     cout<<"T"<<endl;
//     tabs++;
//     F();T_();
// }

// void parser::T_(){
//     print_tabs();
//     cout<<"T_"<<endl;
//     tabs++;

//     if (_lexer.peek(1).tokenType == TokenType::PLUS)
//     {
//         expect(TokenType::PLUS); F(); T_(); 
//     }
//     else{
//      ;
//     }
//     tabs--;
// }

// void parser::F(){

//     print_tabs();
//     cout<<"F"<<endl;
//     tabs++;

//     if (_lexer.peek(1).tokenType == TokenType::ID)
//     {
//         expect(TokenType::ID);
//     }
//     else if(_lexer.peek(1).tokenType == TokenType::INT)
//     {
//      expect(TokenType::INT);   
//     }
//     else{
//        ;
//     }
//     tabs--;
// }

// void parser::Statement_List(){
//     resetPointer();
//     cout<<"SL"<<endl;
//     tabs++;

//     if (_lexer.peek(1).tokenType == TokenType::KAAM || _lexer.peek(1).tokenType == TokenType::RAKHO)
//     {
//        Decleration();
//     }

//     tabs--;
// }


// void parser::Decleration(){
    
//     print_tabs();
//     cout<<"D"<<endl;
//     tabs++;
 
//     if (_lexer.peek(1).tokenType == TokenType::KAAM)
//     {
//        Funtion_Decleration();
//     }
//     else if(_lexer.peek(1).tokenType == TokenType::RAKHO){

//         Variable_Decleration();
//     }

//     tabs--;
// }

// void parser::Variable_Decleration()
// {
//     print_tabs();
//     cout<<"VD"<<endl;
//     tabs++;
 
//     if (_lexer.peek(1).tokenType == TokenType::RAKHO)
//     {
//        expect(TokenType::RAKHO);
//        expect(TokenType::ID);
//        expect(TokenType::AT); 
//         expect(TokenType::ADAD); 
//        VD_Specifier();
//     }

//     tabs--;

// }

// void parser::VD_Specifier(){

//     print_tabs();
//     cout<<"VD_S"<<endl;
//     tabs++;
 
//     if (_lexer.peek(1).tokenType == TokenType::ASSIGNOP)
//     {
//        expect(TokenType::ASSIGNOP);
//         F();T_();
//     }

//     tabs--;

// }

// void parser::Funtion_Decleration(){

// }





///////////////////////////////////////////////////
///////////////////////////////////////////////////
///////////////////////////////////////////////////



int  parser::countStatementsInBlock(int pos, int btype){
    //cout<<"Pos = "<<pos<<endl;
    //cout<<"idmeodi = "<< _lexer.getStatementCount(pos,btype);
    return _lexer.getStatementCount(pos,btype);

 }

  void parser::countDecleration(){
     functionCount =  _lexer.getDecCount();
  }







///////////////////////////////////////////////////
///////////////////////////////////////////////////
///////////////////////////////////////////////////




void parser::Program(){

    const char* filename = "TAC.txt";
    int result = std::remove(filename);
    //removeNL();
    print_tabs();
    resetPointer();
    countDecleration();
    removeNL();
    cout<<"P"<<endl;
    tabs++;

    if (_lexer.peek(1).tokenType == TokenType::KAAM || _lexer.peek(1).tokenType == TokenType::RAKHO)
    {
       DeclarationList();
       write_TAC("HALT",1);
    }
    else if(_lexer.peek(1).tokenType == TokenType::END_OF_FILE){
        ;
    }
    else{
        syntax_error();
    }
    tabs--;
    cout<<"PROGRAM COMPILED SUCCESSFULLY"<<endl;
    //removeNL();

}

void parser::DeclarationList(){
    //removeNL();
    print_tabs();
    cout<<"DL"<<endl;
    tabs++;
    if( ( _lexer.FunctionDecCount(_lexer.getCurrentPointer()) + _lexer.globalVariablesCount(_lexer.getCurrentPointer())) ==1){
    Declaration();
    }
    else if((_lexer.FunctionDecCount(_lexer.getCurrentPointer()) + _lexer.globalVariablesCount(_lexer.getCurrentPointer())) > 1) {
     Declaration(); removeNL(); DeclarationList(); 
    }
    else{
        ;
    }
    tabs--;
    //removeNL();
}




void parser::Declaration(){
    //removeNL();
    print_tabs();
    cout<<"D"<<endl;
    tabs++;
 
    if (_lexer.peek(1).tokenType == TokenType::KAAM)
    {
        FunctionDeclaration();
    }
    else if(_lexer.peek(1).tokenType == TokenType::RAKHO){
      
        VariableDeclaration();  
    }
    else
    {
        syntax_error();
    }

    tabs--;
   // removeNL();
   
}




void parser::TypeF(){
   // removeNL();
    print_tabs();
    cout<<"TypeF"<<endl;
    tabs++;
  

 
    if (_lexer.peek(1).tokenType == TokenType::ADAD)
    {
       expect(TokenType::ADAD); 
    }
    else if(_lexer.peek(1).tokenType == TokenType::KHALI){
       expect(TokenType::KHALI); 
    }
    else{
        syntax_error();
    }

    tabs--;
   // removeNL();

}




void parser::TypeID(){
    removeNL();
    print_tabs();
    cout<<"TypeID"<<endl;
    tabs++;
 
    if (_lexer.peek(1).tokenType == TokenType::ADAD)
    {
       expect(TokenType::ADAD); 
    }
    else{
        syntax_error();
    }

    tabs--;
    //removeNL();
}


void parser::Parameter(){
    //Parameter → id @ typeV
    //removeNL();
    print_tabs();
    cout<<"P"<<endl;
    tabs++;
 
    if (_lexer.peek(1).tokenType == TokenType::ID)
    {
        expect(TokenType::ID);
        ADDTOTABLE(_lexer.getCurrentToken(_lexer.getCurrentPointer()),1,2);
        ADD_Initial_Value("0");
        expect(TokenType::AT);
        TypeID();
          
    }else{
        syntax_error();
    }

    tabs--;
  // removeNL();


}




void parser::ParameterList(){
  /// removeNL();
    //ParameterList → Parameter | Parameter `|`  ParameterList 
    print_tabs();
    cout<<"PL"<<endl;
    tabs++;
 
    if (_lexer.peek(1).tokenType == TokenType::ID && _lexer.peek(4).tokenType != TokenType::PIPE)
    {
        Parameter();     
    }
    else if(_lexer.peek(4).tokenType == TokenType::PIPE){
        Parameter();
        expect(TokenType::PIPE);
        ParameterList();
    }
    else
    {
       ;
    }

    tabs--;
  /// removeNL();

}

void parser::FunctionDeclaration(){
   ///removeNL();
    //FunctionDeclaration → “kaam” id “@” typeF "(" ParameterList ")" BlockF

    print_tabs();
    cout<<"FD"<<endl;
    tabs++;

    
 
    if (_lexer.peek(1).tokenType == TokenType::KAAM && _lexer.peek(2).tokenType != TokenType::MARKAZI)
    {
       addr=0;
       expect(TokenType::KAAM);
    //    write_TAC(_lexer.peek(1).lexeme,0);
    //    write_TAC(":",1);
       expect(TokenType::ID);
       if (_lexer.peek(2).tokenType == TokenType::ADAD){
        ADD_Initial_Value(to_string(n_line));
        ADDTOTABLE(_lexer.getCurrentToken(_lexer.getCurrentPointer()),1,0); 
        }
        else{
             ADD_Initial_Value("0");
         ADDTOTABLE(_lexer.getCurrentToken(_lexer.getCurrentPointer()),0,0);
         }
       expect(TokenType::AT);
       TypeF(); 
       expect(TokenType::LPAREN);
       ParameterList();
       expect(TokenType::RPAREN);
       BlockF();

    }
    else if (_lexer.peek(1).tokenType == TokenType::KAAM && _lexer.peek(2).tokenType == TokenType::MARKAZI )
    {
       addr=0;
       expect(TokenType::KAAM);
       expect(TokenType::MARKAZI);
    //    write_TAC("markazi",0);
    //    write_TAC(":",1);
       ADDTOTABLE(_lexer.getCurrentToken(_lexer.getCurrentPointer()),0,0);
       ADD_Initial_Value(to_string(n_line));
       expect(TokenType::AT);
       TypeF(); 
       expect(TokenType::LPAREN);
       ParameterList();
       expect(TokenType::RPAREN);
       BlockF();
    }
    else{
        syntax_error();
    }


    tabs--;
    //removeNL();


}




void parser::VariableDeclaration(){
    print_tabs();
    cout<<"VD"<<endl;
    token VDSpecifier_i;
    tabs++;
 
    if (_lexer.peek(1).tokenType == TokenType::RAKHO )
    {
       expect(TokenType::RAKHO);

       if (_lexer.peek(1).tokenType == TokenType::ID )
       VDSpecifier_i = _lexer.peek(1);

       expect(TokenType::ID);
       ADDTOTABLE(_lexer.getCurrentToken(_lexer.getCurrentPointer()),1,1);
       expect(TokenType::AT); 
       TypeID(); 
       VDSpecifier(VDSpecifier_i);
    }
    else{
        ;
    }

    tabs--;
  // removeNL();
}


token parser::VariableAssignment(){
    print_tabs();
    cout<<"VA"<<endl;
    tabs++;
    token Expression_v;
    token ID_v;
 
    if (_lexer.peek(1).tokenType == TokenType::RAKHO && _lexer.peek(4).tokenType != TokenType::NL &&  _lexer.peek(4).tokenType != TokenType::CHALAO)
    {
       expect(TokenType::RAKHO);
       if (_lexer.peek(1).tokenType == TokenType::ID) ID_v=_lexer.peek(1);
       expect(TokenType::ID);
       expect(TokenType::ASSIGNOP);
       Expression_v = Expression();

       write_TAC(ID_v.lexeme,0);
       write_TAC("=",0);
       write_TAC(Expression_v.lexeme,1);
       tabs--;
       return ID_v;
    }
     else if (_lexer.peek(1).tokenType == TokenType::RAKHO && _lexer.peek(4).tokenType == TokenType::CHALAO ){
       expect(TokenType::RAKHO);
       if (_lexer.peek(1).tokenType == TokenType::ID) ID_v=_lexer.peek(1);
       expect(TokenType::ID);
       expect(TokenType::ASSIGNOP);
       Expression_v =FunctionCall();

       write_TAC(ID_v.lexeme,0);
       write_TAC("=",0);
       write_TAC(Expression_v.lexeme,1);
       tabs--;
       return ID_v;
    }

    else{
        syntax_error();
    }
   
    tabs--;
    return ID_v;
}

void parser::VDSpecifier(token VDSpecifier_i){
    //removeNL();
    print_tabs();
    cout<<"VD_S"<<endl;
    tabs++;
 
    if (_lexer.peek(1).tokenType == TokenType::ASSIGNOP  && _lexer.peek(2).tokenType != TokenType::NL && _lexer.peek(2).tokenType != TokenType::CHALAO ) 
    {
       expect(TokenType::ASSIGNOP);
       token Expression_v = Expression();
       write_TAC(VDSpecifier_i.lexeme,0);
       write_TAC("=",0);
       write_TAC(Expression_v.lexeme,1);
       string str = Expression_v.lexeme;
       ADD_Initial_Value(str);
    }
    else if (_lexer.peek(1).tokenType == TokenType::ASSIGNOP  && _lexer.peek(2).tokenType == TokenType::CHALAO ) 
    {
       expect(TokenType::ASSIGNOP);
       token Expression_v = FunctionCall();
       write_TAC(VDSpecifier_i.lexeme,0);
       write_TAC("=",0);
       write_TAC(Expression_v.lexeme,1);
       string str = Expression_v.lexeme;
       ADD_Initial_Value("0");
    }
    else if(_lexer.peek(1).tokenType == TokenType::NL) {
         expect(TokenType::NL);
         ADD_Initial_Value("0");
    }
    else{
        syntax_error();
    }

    tabs--;
   //removeNL();

}


void parser::Block(){
    //removeNL();
    print_tabs();
    cout<<"BLOCK"<<endl;
    tabs++;
 
    if (_lexer.peek(1).tokenType == TokenType::KARO)
    {
       expect(TokenType::KARO);
       expect(TokenType::NL);
       StatementList();
       expect(TokenType::BAS); 
       expect(TokenType::KARO);
       expect(TokenType::NL);
    }else{
        syntax_error();
    }

    tabs--;
    //removeNL();

}
void parser::BlockF(){
    //removeNL();
    int Statement =0;
    print_tabs();
    cout<<"BLOCKF"<<endl;
    tabs++;
 
    if (_lexer.peek(1).tokenType == TokenType::KARO)
    {
       expect(TokenType::KARO);
       expect(TokenType::NL);
       StatementList();
       expect(TokenType::KAAM); 
       expect(TokenType::KHATAM);
       if (_lexer.peek(1).tokenType == TokenType::NL)
       expect(TokenType::NL);
       else if (_lexer.peek(1).tokenType == TokenType::END_OF_FILE)
       expect(TokenType::END_OF_FILE);
    }
    else{
        syntax_error();
    }

    tabs--;
   // removeNL();

}




void parser::BlockIF(){

    print_tabs();
    cout<<"BLOCKIF"<<endl;
    tabs++;
 
    if (_lexer.peek(1).tokenType == TokenType::KARO)
    {
       expect(TokenType::KARO);
       expect(TokenType::NL);
       IFStatementList();

       if(Check_Phir==false){
       BEF = BEF_v.back();
       BEF_v.pop_back();
       fillblank(BEF,n_line);
       }

       for(int i=0;i<elses.size();i++)
       {
         fillblank(elses[i],n_line);
       }

       elses.clear();
       expect(TokenType::BAS); 
       expect(TokenType::KARO);
       expect(TokenType::NL);

       Check_Phir=false;


    }else{
        syntax_error();
    }

    tabs--;


}
void parser::IFStatementList(){

    print_tabs();
    cout<<"ISL"<<endl;
    tabs++;

    if(_lexer.CheckLast(_lexer.getCurrentPointer())==1){
      IFStatement();
    }
    else if(_lexer.CheckLast(_lexer.getCurrentPointer())==0) {
      IFStatement(); IFStatementList();
    }
    else if(_lexer.CheckLast(_lexer.getCurrentPointer())==-1) {
        tabs--;
        return;
    }
    else{
        tabs--;
        return;
    }

    tabs--;
    

}
void parser::IFStatement(){

    print_tabs();
    cout<<"IF"<<endl;
    tabs++;

    


    if (_lexer.peek(1).tokenType == TokenType::AGAR)
    {
        SelectionStatement();
    }
    else if( _lexer.peek(1).tokenType == TokenType::WARNA){
        write_TAC("goto",0);
        elses.push_back(n_line);
        write_TAC("_",1);
        BEF = BEF_v.back();
        BEF_v.pop_back();
        fillblank(BEF,n_line);
        WarnaStatement();
        
    }
    else if (_lexer.peek(1).tokenType == TokenType::JAB){
        IterativeStatement();
    }
    else if (_lexer.peek(1).tokenType == TokenType::WAPAS){
        ReturnStatement();
    }
    else if (_lexer.peek(1).tokenType == TokenType::RAKHO && _lexer.peek(3).tokenType == TokenType::AT){
        VariableDeclaration();
    }
    else if (_lexer.peek(1).tokenType == TokenType::RAKHO && _lexer.peek(3).tokenType == TokenType::ASSIGNOP){
        VariableAssignment();
    }
    else if (_lexer.peek(1).tokenType == TokenType::CHALAO){
        FunctionCall();
    }
    else if (_lexer.peek(1).tokenType == TokenType::LO  || _lexer.peek(1).tokenType == TokenType::DEKHAO){
        IOStatement();
    }
    else if (_lexer.peek(1).tokenType == TokenType::ID || _lexer.peek(1).tokenType == TokenType::INT){
        Expression();
    }
    else if((_lexer.EmptyStatements(_lexer.getCurrentPointer())==1)){
        ;
    }
    else{
         syntax_error();
    }

    tabs--;
    removeNL();

}


void parser::StatementList(){
  // removeNL();
    print_tabs();
    cout<<"SL"<<endl;
    tabs++;
    // cout<<"Call "<<_lexer.CheckLast(_lexer.getCurrentPointer())<<endl;
